--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "doctrine/doctrine-bundle",
+    "name": "arulu/doctrine-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony DoctrineBundle",
+    "description": "Arulu DoctrineBundle",
     "keywords": ["DBAL", "ORM", "Database", "Persistence"],
     "homepage": "http://www.doctrine-project.org",
     "license": "MIT",
@@ -18,6 +18,10 @@
             "name": "Symfony Community",
             "homepage": "http://symfony.com/contributors"
         }
+        {
+            "name": "Arulu",
+            "homepage": "http://coolmobile.com"
+        }        
     ],
     "require": {
         "php": ">=5.3.2",
