--- a/Tests/DependencyInjection/Fixtures/config/yml/orm_filters.yml
+++ b/Tests/DependencyInjection/Fixtures/config/yml/orm_filters.yml
@@ -8,5 +8,5 @@ doctrine:
     orm:
         filters:
             soft_delete:
-                class: Arulu\Bundle\DoctrineBundle\Tests\DependencyInjection\TestFilter
+                class: Doctrine\Bundle\DoctrineBundle\Tests\DependencyInjection\TestFilter
                 enabled: true
