--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
         }        
     ],
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.1.*",
-        "symfony/doctrine-bridge": "2.1.*",
-        "doctrine/dbal": ">=2.2,<2.4-dev"
+        "php": ">=5.4",
+        "symfony/framework-bundle": "2.3.*",
+        "symfony/doctrine-bridge": "2.3.*",
+        "doctrine/dbal": "2.3.*"
     },
     "require-dev": {
-        "doctrine/orm": ">=2.2,<2.4-dev",
+        "doctrine/orm": ">=2.2.3,<2.4-dev",
         "symfony/yaml": "2.1.*",
         "symfony/validator": "2.1.*"
     },
